--- a/src/templates/sassy.html
+++ b/src/templates/sassy.html
@@ -14,15 +14,6 @@
     <p><h2><code>We are here to get your science done</code></h2></p>
     <div class="col-md-1"></div>
   <div class="container">
-    <!--
-    <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
-        <h3><i>Databases:</i></h3>
-      </div>
-      <div class="col-md-1"></div>
-    </div>
-    -->
     <p></p>
     <div class="row">
       <div class="col-md-1"></div>
@@ -88,8 +79,14 @@
     <p></p>
     <div class="row">
       <div class="col-md-1"></div>
-      <div class="col-md-10">
+      <div class="col-md-3">
+        <a href="/sassy/mmt/imaging/ra=math.nan&dec=math.nan&magnitude=math.nan&filter_name=g&name=unknown" class="btn btn-lg btn-outline-danger btn-block"><small>MMT Image Request</small></a>
+      </div>
+      <div class="col-md-4">
         <a href="/sassy/cron" class="btn btn-lg btn-outline-danger btn-block"><small>SASSyCron</small></a>
+      </div>
+      <div class="col-md-3">
+        <a href="/sassy/mmt/longslit/ra=math.nan&dec=math.nan&magnitude=math.nan&filter_name=g&name=unknown" class="btn btn-lg btn-outline-danger btn-block"><small>MMT Spectra Request</small></a>
       </div>
       <div class="col-md-1"></div>
     </div>
@@ -113,7 +110,7 @@
 <!-- footer -->
 <footer id="landing-footer">
  <div class="container">
-  <h5>&copy; 2018&ndash;2020 <a href="https://www.as.arizona.edu">Steward Observatory</a>, <a
+  <h5>&copy; 2018&ndash;2021 <a href="https://www.as.arizona.edu">Steward Observatory</a>, <a
           href="https://www.arizona.edu">The University of Arizona</a></h5>
   <h6>&copy; Mount Lemmon Sky Center, all background images</h6>
  </div>
