--- a/src/templates/sassy_cron_page.html
+++ b/src/templates/sassy_cron_page.html
@@ -4,7 +4,7 @@
 <div class="row">
  <div class="col-md-12">
   {% if oid %}
-   <h3>{{ oid }}</h3>
+   <h3>Placeholder for the SassyCron {{ oid }} page</h3>
   {% else %}
    <h3>No data found</h3>
   {% endif %}
