Made back button behave same way every time

--- a/src/templates/mmt_longslit.html
+++ b/src/templates/mmt_longslit.html
@@ -136,7 +136,7 @@
      {{ form.submit(class_="btn btn-md btn-primary") }}
     </div>
     <div>
-     <a href="{{ url_for('cron_records') }}" class="btn btn-md btn-danger">Cancel</a>
+     <a href="{{ url_for('sassy_home') }}" class="btn btn-md btn-danger">Cancel</a>
     </div>
    </div>
 
