--- a/src/templates/mmt_request_notok.html
+++ b/src/templates/mmt_request_notok.html
@@ -10,7 +10,7 @@
  <br>
  <div class="row">
   <div class="col-md-2">
-   <a href="{{ url_for('cron_records') }}" class="btn btn-md btn-info"><i class="fas fa-backward"></i> &nbsp;Back</a>
+   <a href="{{ url_for('sassy_home') }}" class="btn btn-md btn-info"><i class="fas fa-backward"></i> &nbsp;Back</a>
   </div>
  </div>
 </div>
