--- a/src/templates/mmt_request.html
+++ b/src/templates/mmt_request.html
@@ -29,7 +29,7 @@
      <a href="{{ url_for('mmt_request') }}?payload={{ payload }}" class="btn btn-md btn-primary">Confirm</a>
     </div>
     <div>
-     <a href="{{ url_for('cron_records') }}" class="btn btn-md btn-danger">Cancel</a>
+     <a href="{{ url_for('sassy_home') }}" class="btn btn-md btn-danger">Cancel</a>
     </div>
    </div>
   </div>
