--- a/src/templates/sassy_cron_page.html
+++ b/src/templates/sassy_cron_page.html
@@ -3,8 +3,49 @@
 
 <div class="row">
  <div class="col-md-12">
-  {% if oid %}
-   <h3>{{ oid }}</h3>
+  {% if ztf %}
+   <h2>{{ ztf['oid'] }}</h2> 
+   <p> <b> RA/DEC:</b> {{ ztf['ra_hms'] }} {{ ztf['dec_dms'] }} </p>
+   
+   <p> <b>JD:</b> {{ ztf['jd'] }} <b>Magnitude:</b> {{ ztf['magap'] }} <b>{{ ztf['filter'] }}</b> </p>
+
+   {% if tns['available'] %}
+      <h2>TNS Information </h2>
+      <h3 href='{{ tns['tns_link'] }}'> {{ tns['alias'] }} </h3>
+      <p> <b>Discovery Date:</b> {{ tns['discovery_date'] }} <b>Discovery Mag</b>: {{ tns['discovery_mag'] }} <b>Group:</b> {{ tns['source_group'] }} </p>
+      <p> <b>Host information:</b> {{ tns['host'] }} <b>Redshift:</b> {{ tns['host_z'] }} </p>
+   {% endif %}
+
+   {% if glade['available'] %}
+      <h2> Glade_p3c Information </h2>
+      <p> <b>ID</b>: {{ glade['id'] }} <b>Distance</b>: {{ glade['distance'] }} <b>Redshift</b> {{ glade['redshift'] }} </p>
+   {% endif %}
+
+   {% if alerce['available'] %}
+      <h2>ALERCE Information </h2>
+      <p> <b>Early Classifier:</b> {{ alerce['aetype'] }} <b>Prob:</b> {{ alerce['aeprob'] }}</p>
+      <p> <b>Late Classifier:</b> {{ alerce['altype'] }} <b>Prob:</b> {{ alerce['alprob'] }}</p>
+      <p>
+      	<a href="/" target="_blank" title="">
+	      <img src="/static/img/{{ alerce['spng'] }}" title="{{ alerce['spng'] }}" width="100" height="100">
+      	</a>
+	<a href="/" target="_blank" title="">
+              <img src="/static/img/{{ alerce['dpng'] }}" title="{{ alerce['dpng'] }}" width="100" height="100">
+        </a>
+	<a href="/" target="_blank" title="">
+              <img src="/static/img/{{ alerce['tpng'] }}" title="{{ alerce['tpng'] }}" width="100" height="100">
+        </a>
+      </p>
+   {% endif %}
+
+   <h2> Link(s) </h2>
+   <p>
+      <a class="btn btn-outline-success btn-small" href="https://alerce.online/object/{{ztf['oid']}}/" target="_blank" title="{{ztf['oid']}}">Alerce</a>
+      <a class="btn btn-outline-success btn-small" href="https://lasair.roe.ac.uk/object/{{ztf['oid']}}/" target="_blank" title="{{ztf['oid']}}">Lasair</a>
+      <a class="btn btn-outline-info btn-small" href="/sassy/mmt/longslit/{{ztf['oid']}}" title="Longslit_{{ztf['oid']}}">Spectrum</a>
+
+   </p>
+
   {% else %}
    <h3>No data found</h3>
   {% endif %}
